# awsmr

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  README.md  awsmr.py  get_latest_release.py  multiregion.py  pyproject.toml
.github/workflows/: get-latest-release.yaml  publish.yaml  test.yaml
docs/: generating-a-repo-scoped-token.md
tests/: test_get_latest_release.py  test_multiregion.py
